--- a/LibraNET/Views/Shared/_BookPartial.cshtml
+++ b/LibraNET/Views/Shared/_BookPartial.cshtml
@@ -1,33 +1,34 @@
 ﻿@model BookViewModel
 @inject IImageService imageService
-
 <div class="my-3 col-md-8 col-lg-6 col-xl-4">
-	<div class="card text-black entity-card">
-		<div class="text-center img-container">
-			<img class="p-3" src="~/Images/Books/@(imageService.GetBookImageNameById(Model.ImageId))" alt="@Model.Title" />
-		</div>
-		<div class="card-body text-center">
-			<h5 class="card-title">@Model.Title</h5>
-			<p class="text-muted">
-				@{
-					StringBuilder authorsText = new StringBuilder();
-					authorsText.Append(Model.Authors.Count == 1 ? "Author: " : "Authors: ");
-					string authors = string.Join(", ", Model.Authors.Select(a => a.Name));
-					authorsText.Append(authors);
-				}
+	<a class="text-decoration-none text-reset" asp-controller="Book" asp-action="Details" asp-route-id="@Model.Id">
+		<div class="card text-black entity-card">
+			<div class="text-center img-container">
+				<img class="p-3" src="~/Images/Books/@(imageService.GetBookImageNameById(Model.ImageId))" alt="@Model.Title" />
+			</div>
+			<div class="card-body text-center">
+				<h5 class="card-title">@Model.Title</h5>
+				<p class="text-muted">
+					@{
+						StringBuilder authorsText = new StringBuilder();
+						authorsText.Append(Model.Authors.Count == 1 ? "Author: " : "Authors: ");
+						string authors = string.Join(", ", Model.Authors.Select(a => a.Name));
+						authorsText.Append(authors);
+					}
 
-				@authorsText.ToString()
-			</p>
-			<p class="text-muted mb-4">
-				@{
-					StringBuilder categoriesText = new StringBuilder();
-					categoriesText.Append(Model.Categories.Count == 1 ? "Category: " : "Categories: ");
-					string categories = string.Join(", ", Model.Categories.Select(a => a.Name));
-					categoriesText.Append(categories);
-				}
-				@categoriesText.ToString()
-			</p>
-			<h5 class="fw-bold">@($"${Model.Price:f2}")</h5>
+					@authorsText.ToString()
+				</p>
+				<p class="text-muted mb-4">
+					@{
+						StringBuilder categoriesText = new StringBuilder();
+						categoriesText.Append(Model.Categories.Count == 1 ? "Category: " : "Categories: ");
+						string categories = string.Join(", ", Model.Categories.Select(a => a.Name));
+						categoriesText.Append(categories);
+					}
+					@categoriesText.ToString()
+				</p>
+				<h5 class="fw-bold">@($"${Model.Price:f2}")</h5>
+			</div>
 		</div>
-	</div>
+	</a>
 </div>
