--- a/LibraNET/Views/_ViewImports.cshtml
+++ b/LibraNET/Views/_ViewImports.cshtml
@@ -7,12 +7,14 @@
 @using LibraNET.Web.ViewModels.Category;
 @using LibraNET.Web.ViewModels.User;
 @using LibraNET.Web.ViewModels.Enums;
-@using Microsoft.AspNetCore.Identity;
+@using LibraNET.Web.ViewModels.Comment;
+
 @using static LibraNET.Common.GeneralApplicationConstants;
 
 @using System.Text;
 @using System.Globalization;
 
+@using Microsoft.AspNetCore.Identity;
 @using X.PagedList.Mvc.Core;
 @using X.PagedList.Web.Common;
 
