--- a/LibraNET/Views/Book/Details.cshtml
+++ b/LibraNET/Views/Book/Details.cshtml
@@ -38,24 +38,22 @@
 				<h5 class="my-3">$@Model.Price.ToString("f2")</h5>
 				@if (Model.AvailableCount > 0)
 				{
-					<div class="row mb-3">
-						<div class="col-md-4 col-6 mb-3">
-							<label class="mb-2 d-block">Quantity</label>
-							<div class="input-group mb-3" style="width: 170px;">
-								<button class="btn btn-white border border-secondary px-3" type="button" id="button-minus" onclick="DecreaseQuantity()">
-									<i class="bi bi-dash-lg"></i>
-								</button>
-								<input asp-for="Quantity" type="text" class="form-control text-center border border-secondary bg-white" value="1" min="1" max="@Model.AvailableCount" disabled />
-								<button class="btn btn-white border border-secondary px-3" type="button" id="button-plus" onclick="IncreaseQuantity()">
-									<i class="bi bi-plus-lg"></i>
-								</button>
+					<form id="AddToCartForm" asp-controller="Cart" asp-action="Add" asp-route-id="@Model.Id" method="post">
+						<div class="row mb-3">
+							<div class="col-md-4 col-6 mb-3">
+								<input asp-for="Quantity" class="form-control text-center border border-secondary bg-white" min="1" max="@Model.AvailableCount" />
 							</div>
 						</div>
-					</div>
+					</form>
 				}
 				<div>
-					<a asp-controller="Book" asp-action="AddToCart" asp-route-id="@Model.Id" asp-route-quantity="@Model.Quantity" class="btn btn-success my-1 @(Model.AvailableCount > 0 ? "" : "disabled")"> <i class="bi bi-bag-fill"></i> Add to cart </a>
-					<a asp-controller="Book" asp-action="AddToFavorite" asp-route-id="@Model.Id" class="btn btn-dark my-1 @(Model.AvailableCount > 0 ? "" : "disabled")"> <i class="bi bi-heart-fill"></i> Favorite </a>
+					<button id="AddToCartBtn" class="btn btn-success my-1 @(Model.AvailableCount > 0 ? "" : "disabled")"> <i class="bi bi-bag-fill"></i> Add to cart </button>
+					@if (!Model.IsFavorite)
+					{
+						<form class="d-inline-flex" asp-controller="Book" asp-action="AddToFavorite" asp-route-id="@Model.Id" method="post">
+							<button type="submit" class="btn btn-dark my-1"> <i class="bi bi-heart-fill"></i> Favorite </button>
+						</form>
+					}
 				</div>
 			</div>
 		</div>
@@ -99,7 +97,7 @@
 </div>
 @section Scripts {
 	<partial name="_ValidationScriptsPartial" />
-	<script src="~/js/Book/Details.js"></script>
+	<script src="~/js/Book/Details.js" asp-append-version="true"></script>
 	<script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
 	<script src="~/lib/dompurify/dist/purify.js"></script>
 	<script type="module" src="~/js/comments.js" asp-append-version="true"></script>
