--- a/LibraNET/Views/Cart/Index.cshtml
+++ b/LibraNET/Views/Cart/Index.cshtml
@@ -7,17 +7,26 @@
 		<div class="row d-flex justify-content-center align-items-center h-100">
 			<div class="col-10">
 				<div class="d-flex justify-content-between align-items-center mb-4">
-					<h3 class="fw-normal text-black">Shopping Cart</h3>
+					<h3 class="fw-normal text-dark fw-bold">Shopping Cart</h3>
 				</div>
-
-				@foreach (var book in Model)
+				@if (Model.Count > 0)
 				{
-					<partial name="_BookCartPartial" model="@book"></partial>
+					@foreach (var book in Model)
+					{
+						<partial name="_BookCartPartial" model="@book"></partial>
+					}
 				}
-
+				else
+				{
+					<div class="card mb-3">
+						<div class="card-body">
+							<h3 class="text-center">Your cart is empty!</h3>
+						</div>
+					</div>
+				}
 				<div class="card">
 					<div class="card-body">
-						<button type="button" class="btn btn-warning btn-block btn-lg">Proceed to Pay</button>
+						<a class="btn btn-success w-100 btn-lg @(Model.Count > 0 ? "" : "disabled")" asp-controller="Cart" asp-action="Checkout">Checkout</a>
 					</div>
 				</div>
 			</div>
