--- a/LibraNET/Views/Shared/_BookCartPartial.cshtml
+++ b/LibraNET/Views/Shared/_BookCartPartial.cshtml
@@ -1,25 +1,27 @@
 ﻿@model BookCartViewModel
 @inject IImageService imageService
-<div class="card rounded-3 mb-4">
+<div id="@Model.Id" class="card rounded-3 mb-4">
 	<div class="card-body p-4">
 		<div class="row d-flex justify-content-between align-items-center">
-			<div class="col-md-1 col-lg-1 col-xl-1">
+			<div class="col-md-1 col-lg-1 col-xl-1 mb-3">
 				<img src="~/Images/Books/@(imageService.GetBookImageNameById(Model.ImageId))"
 					 class="img-fluid rounded-3" alt="Cotton T-shirt">
 			</div>
-			<div class="col-md-3 col-lg-3 col-xl-3">
-				<p class="lead fw-normal mb-2">@Model.Title</p>
+			<div class="col-md-3 col-lg-3 col-xl-3 mb-3">
+				<h5 class="m-0 ellipsis">@Model.Title</h5>
 			</div>
-			<div class="col-md-4 col-lg-4 col-xl-3 d-flex justify-content-center align-content-center">
-				<form id="quantityForm" asp-controller="Cart" asp-action="Add" asp-route-id="@Model.Id"  method="post">
-					<input asp-for="Quantity" class="form-control text-center border border-secondary bg-white" min="1" max="@Model.AvailableCount" />
+			<div class="col-md-3 col-lg-3 col-xl-2 d-flex justify-content-center mb-3">
+				<form asp-controller="Cart" asp-action="ChangeQuantity" asp-route-id="@Model.Id" method="post">
+					<input asp-for="Quantity" class="form-control text-center border border-secondary bg-white QuantityInput" min="1" max="@Model.AvailableCount" />
 				</form>
 			</div>
-			<div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1 mt-2">
+			<div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
 				<h5 class="mb-0 text-center">$@Model.TotalPrice</h5>
 			</div>
 			<div class="col-md-1 col-lg-1 col-xl-1 text-end">
-				<a href="#!" class="text-danger"><i class="fas fa-trash fa-lg"></i></a>
+				<form asp-controller="Cart" asp-action="Remove" asp-route-id="@Model.Id" method="post">
+					<button type="submit" class="text-danger reset-button-style"><i class="bi bi-trash3-fill" style="font-size: 1.5rem;"></i></button>
+				</form>
 			</div>
 		</div>
 	</div>
