--- a/LibraNET/Views/Shared/_LoginPartial.cshtml
+++ b/LibraNET/Views/Shared/_LoginPartial.cshtml
@@ -7,19 +7,19 @@
 		string name = $"{user.FirstName} {user.LastName}";
 
 		<li class="nav-item px-1">
-			<a class="nav-link text-white">
+			<a class="nav-link text-white" asp-controller="Book" asp-action="Favorite">
 				<i class="bi bi-heart-fill" style="font-size: 1.2rem;"></i>
 				<span>Favorite</span>
 			</a>
 		</li>
-		<li class="nav-item px-1">
-			<a class="nav-link text-white">
-				<i class="bi bi-bag-fill" style="font-size: 1.2rem;"></i>
-				<span>Bag</span>
+		<li class="nav-item px-1" >
+			<a class="nav-link text-white" asp-controller="Cart" asp-action="Index">
+				<i class="bi bi-cart-fill" style="font-size: 1.2rem;"></i>
+				<span>Cart</span>
 			</a>
 		</li>
 		<li class="nav-item px-1">
-			<a class="nav-link text-white">
+			<a class="nav-link text-white" asp-controller="User" asp-action="Account">
 				<i class="bi bi-person-fill" style="font-size: 1.2rem;"></i>
 				<span>Account</span>
 			</a>
