--- a/LibraNET/Views/Shared/_LoginPartial.cshtml
+++ b/LibraNET/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,6 @@
 ﻿@inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
+@inject ICartService cartService
 <ul class="navbar-nav">
 	@if (SignInManager.IsSignedIn(User))
 	{
@@ -13,9 +14,12 @@
 			</a>
 		</li>
 		<li class="nav-item px-1" >
+			@{
+				var userId = User.FindFirstValue(ClaimTypes.NameIdentifier);
+			}
 			<a class="nav-link text-white" asp-controller="Cart" asp-action="Index">
 				<i class="bi bi-cart-fill" style="font-size: 1.2rem;"></i>
-				<span>Cart</span>
+				<span>Cart(@(await cartService.CountAsync(userId)))</span>
 			</a>
 		</li>
 		<li class="nav-item px-1">
