--- a/LibraNET/Views/_ViewImports.cshtml
+++ b/LibraNET/Views/_ViewImports.cshtml
@@ -13,6 +13,7 @@
 
 @using System.Text;
 @using System.Globalization;
+@using System.Security.Claims;
 
 @using Microsoft.AspNetCore.Identity;
 @using X.PagedList.Mvc.Core;
