Create checkout page

--- a/LibraNET/Views/_ViewImports.cshtml
+++ b/LibraNET/Views/_ViewImports.cshtml
@@ -8,6 +8,7 @@
 @using LibraNET.Web.ViewModels.User;
 @using LibraNET.Web.ViewModels.Enums;
 @using LibraNET.Web.ViewModels.Comment;
+@using LibraNET.Web.ViewModels.Cart;
 
 @using static LibraNET.Common.GeneralApplicationConstants;
 
