--- a/LibraNET/wwwroot/css/site.css
+++ b/LibraNET/wwwroot/css/site.css
@@ -294,7 +294,7 @@ input[type=range] {
     border: hidden !important;
 }
 
-    .entity-card p, .card-title, .ellipsis {
+    .entity-card p, .card-title {
         overflow: hidden;
         text-overflow: ellipsis;
         display: -webkit-box;
@@ -309,6 +309,15 @@ input[type=range] {
         box-shadow: 2px 2px 15px #b7b7b7;
     }
 
+.ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+    line-height: 1em;
+}
 
 /*Cart*/
 input[type=number]::-webkit-inner-spin-button,
