Create favorites page and fix some errors

--- a/LibraNET/Views/Book/All.cshtml
+++ b/LibraNET/Views/Book/All.cshtml
@@ -22,7 +22,7 @@
 				</div>
 				<div id="search" class="my-2 w-50">
 					<div class="input-group">
-						<input asp-for="SearchString" type="search" class="form-control rounded-left" placeholder="Search by title or ISBN" aria-label="Search" aria-describedby="search-addon" />
+						<input asp-for="SearchString" type="search" class="form-control rounded-left" placeholder="Search by title or ISBN" aria-label="Search" />
 						<button type="submit" class="btn btn-outline-success rounded-left">
 							<i class="bi bi-search"></i>
 						</button>
@@ -30,103 +30,101 @@
 				</div>
 			</div>
 		</div>
-		<div id="content" class="my-4">
-			<div id="filterbar" class="collapse my-4">
-				<div class="btn-group w-100">
-					<button class="btn btn-success text-white text-uppercase" id="apply" type="submit">Apply</button>
-					<button class="btn btn-dark text-white text-uppercase" id="reset" type="button" onclick="resetFilters()">Reset</button>
-				</div>
-				<div class="box border-bottom">
-					<div class="box-label text-uppercase d-flex align-items-center">Authors</div>
-					<div id="authors-box" class="mt-2 mr-1">
-						@foreach (var author in @Model.Authors)
-						{
-							<div class="form-check align-content-center mx-1">
-								<input class="form-check-input" name="SelectedAuthorsIds" value="@author.Id"
-									   type="checkbox" checked="@author.IsSelected" id="@author.Id">
-								<label class="form-check-label" for="@author.Id">@author.Name</label>
-							</div>
-						}
-					</div>
-				</div>
-				<div class="box border-bottom">
-					<div class="box-label text-uppercase d-flex align-items-center">Categories</div>
-					<div id="categories-box" class="mt-2 mr-1">
-						@foreach (var category in @Model.Categories)
-						{
-							<div class="form-check align-content-center mx-1">
-								<input class="form-check-input" name="SelectedCategoriesIds" value="@category.Id"
-									   type="checkbox" checked="@category.IsSelected" id="@category.Id">
-								<label class="form-check-label" for="@category.Id">@category.Name</label>
-							</div>
-						}
-					</div>
-				</div>
-				<div class="box">
-					<div class="box-label text-uppercase d-flex align-items-center">Price</div>
-					<div id="price">
-						<div class="middle">
-							<div class="multi-range-slider">
-								<input asp-for="SelectedMinPrice" type="range" id="input-left"
-									   min="@Model.MinPrice" max="@Model.MaxPrice">
-								<input asp-for="SelectedMaxPrice" type="range" id="input-right"
-									   min="@Model.MinPrice" max="@Model.MaxPrice">
-								<div class="slider">
-									<div class="track"></div>
-									<div class="range"></div>
-									<div class="thumb left"></div>
-									<div class="thumb right"></div>
-								</div>
-							</div>
+		<div id="filterbar" class="collapse my-4">
+			<div class="btn-group w-100">
+				<button class="btn btn-success text-white text-uppercase" id="apply" type="submit">Apply</button>
+				<button class="btn btn-dark text-white text-uppercase" id="reset" type="button" onclick="resetFilters()">Reset</button>
+			</div>
+			<div class="box border-bottom">
+				<div class="box-label text-uppercase d-flex align-items-center">Authors</div>
+				<div id="authors-box" class="mt-2 mr-1">
+					@foreach (var author in @Model.Authors)
+					{
+						<div class="form-check align-content-center mx-1">
+							<input class="form-check-input" name="SelectedAuthorsIds" value="@author.Id"
+								   type="checkbox" checked="@author.IsSelected" id="@author.Id">
+							<label class="form-check-label" for="@author.Id">@author.Name</label>
 						</div>
-						<div class="d-flex align-items-center justify-content-between mt-2">
-							<div> <span id="amount-left" class="font-weight-bold"></span>$</div>
-							<div> <span id="amount-right" class="font-weight-bold"></span>$</div>
-						</div>
-					</div>
+					}
 				</div>
 			</div>
-			<div id="entities">
-				<div class="row justify-content-center">
-					@if (!Model.Books.Any())
+			<div class="box border-bottom">
+				<div class="box-label text-uppercase d-flex align-items-center">Categories</div>
+				<div id="categories-box" class="mt-2 mr-1">
+					@foreach (var category in @Model.Categories)
 					{
-						<h2 class="text-center py-5 text-muted">No books found by the given criteria!</h2>
+						<div class="form-check align-content-center mx-1">
+							<input class="form-check-input" name="SelectedCategoriesIds" value="@category.Id"
+								   type="checkbox" checked="@category.IsSelected" id="@category.Id">
+							<label class="form-check-label" for="@category.Id">@category.Name</label>
+						</div>
 					}
-					@foreach (var book in Model.Books)
-					{
-						<partial name="_BookAllPartial" model="@book"></partial>
-					}
+				</div>
+			</div>
+			<div class="box">
+				<div class="box-label text-uppercase d-flex align-items-center">Price</div>
+				<div id="price">
+					<div class="middle">
+						<div class="multi-range-slider">
+							<input asp-for="SelectedMinPrice" type="range" id="input-left"
+								   min="@Model.MinPrice" max="@Model.MaxPrice">
+							<input asp-for="SelectedMaxPrice" type="range" id="input-right"
+								   min="@Model.MinPrice" max="@Model.MaxPrice">
+							<div class="slider">
+								<div class="track"></div>
+								<div class="range"></div>
+								<div class="thumb left"></div>
+								<div class="thumb right"></div>
+							</div>
+						</div>
+					</div>
+					<div class="d-flex align-items-center justify-content-between mt-2">
+						<div> <span id="amount-left" class="font-weight-bold"></span>$</div>
+						<div> <span id="amount-right" class="font-weight-bold"></span>$</div>
+					</div>
 				</div>
 			</div>
 		</div>
-		@{
-			int previousPage = Model.CurrentPage - 1;
-			if (previousPage == 0)
-			{
-				previousPage = 1;
-			}
-			int maxPage = (int)Math.Ceiling((double)Model.AllBooksCount / BooksPerPage);
-		}
 	</form>
+	<div id="entities">
+		<div class="row justify-content-center">
+			@if (!Model.Books.Any())
+			{
+				<h2 class="text-center py-5 text-muted">No books found!</h2>
+			}
+			@foreach (var book in Model.Books)
+			{
+				<partial name="_BookPartial" model="@book"></partial>
+			}
+		</div>
+	</div>
+	@{
+		int previousPage = Model.CurrentPage - 1;
+		if (previousPage == 0)
+		{
+			previousPage = 1;
+		}
+		int maxPage = (int)Math.Ceiling((double)Model.AllBooksCount / BooksPerPage);
+	}
 	@if (Model.Books.Any())
 	{
-			@Html.PagedListPager(Model.Books,
-		CurrentPage => Url.Action("All", "Book", new {
-		CurrentPage,
-		SearchString = Model.SearchString,
-		BookSorting = (int)Model.BookSorting,
-		SelectedCategoriesIds = Model.SelectedCategoriesIds,
-		SelectedAuthorsIds = Model.SelectedAuthorsIds,
-		SelectedMinPrice = Model.SelectedMinPrice,
-		SelectedMaxPrice = Model.SelectedMaxPrice
-		}),
-		new PagedListRenderOptions {
-			LiElementClasses = new string[] { "page-item"},
-			PageClasses = new string[] { "page-link", "text-success" },
-			MaximumPageNumbersToDisplay = 3,
-			UlElementClasses = new string[] { "pagination", "justify-content-center"},
-			ContainerDivClasses = new string[] { "pagination-container", "py-5" }
-		})
+		@Html.PagedListPager(Model.Books,
+	CurrentPage => Url.Action("All", "Book", new {
+	CurrentPage,
+	SearchString = Model.SearchString,
+	BookSorting = (int)Model.BookSorting,
+	SelectedCategoriesIds = Model.SelectedCategoriesIds,
+	SelectedAuthorsIds = Model.SelectedAuthorsIds,
+	SelectedMinPrice = Model.SelectedMinPrice,
+	SelectedMaxPrice = Model.SelectedMaxPrice
+	}),
+	new PagedListRenderOptions {
+	LiElementClasses = new string[] { "page-item"},
+	PageClasses = new string[] { "page-link", "text-success" },
+	MaximumPageNumbersToDisplay = 3,
+	UlElementClasses = new string[] { "pagination", "justify-content-center"},
+	ContainerDivClasses = new string[] { "pagination-container", "py-5" }
+	})
 	}
 </div>
 
