--- a/LibraNET/Views/Book/Details.cshtml
+++ b/LibraNET/Views/Book/Details.cshtml
@@ -48,12 +48,9 @@
 				}
 				<div>
 					<button id="AddToCartBtn" class="btn btn-success my-1 @(Model.AvailableCount > 0 ? "" : "disabled")"> <i class="bi bi-cart-fill"></i> Add to cart </button>
-					@if (!Model.IsFavorite)
-					{
-						<form class="d-inline-block" asp-controller="Book" asp-action="AddToFavorite" asp-route-id="@Model.Id" method="post">
-							<button type="submit" class="btn btn-dark my-1"> <i class="bi bi-heart-fill"></i> Favorite </button>
-						</form>
-					}
+					<form class="d-inline-block" asp-controller="Book" asp-action="ToggleFavorite" asp-route-id="@Model.Id" method="post">
+						<button type="submit" class="btn btn-dark my-1"> <i class="bi bi-heart-fill"></i>   @(Model.IsFavorite ? "Remove from Favorites" : "Add to Favorites") </button>
+					</form>
 				</div>
 			</div>
 		</div>
