--- a/LibraNET/Views/Shared/_BookCartPartial.cshtml
+++ b/LibraNET/Views/Shared/_BookCartPartial.cshtml
@@ -5,7 +5,7 @@
 		<div class="row d-flex justify-content-between align-items-center">
 			<div class="col-md-1 col-lg-1 col-xl-1 mb-3">
 				<img src="~/Images/Books/@(imageService.GetBookImageNameById(Model.ImageId))"
-					 class="img-fluid rounded-3" alt="Cotton T-shirt">
+					 class="img-fluid rounded-3" alt="@Model.Title">
 			</div>
 			<div class="col-md-3 col-lg-3 col-xl-3 mb-3">
 				<h5 class="m-0 ellipsis">@Model.Title</h5>
