--- a/LibraNET/Views/Shared/_LoginPartial.cshtml
+++ b/LibraNET/Views/Shared/_LoginPartial.cshtml
@@ -8,9 +8,9 @@
 		string name = $"{user.FirstName} {user.LastName}";
 
 		<li class="nav-item px-1">
-			<a class="nav-link text-white" asp-controller="Book" asp-action="Favorite">
+			<a class="nav-link text-white" asp-controller="Book" asp-action="Favorites">
 				<i class="bi bi-heart-fill" style="font-size: 1.2rem;"></i>
-				<span>Favorite</span>
+				<span>Favorites</span>
 			</a>
 		</li>
 		<li class="nav-item px-1" >
