--- a/LibraNET/Views/Cart/Checkout.cshtml
+++ b/LibraNET/Views/Cart/Checkout.cshtml
@@ -17,7 +17,7 @@
 		</section>
 		<section class="customer-details mt-3">
 			<h2>Customer Details</h2>
-			<form asp-controller="Order" asp-action="Buy" method="post">
+			<form asp-controller="Order" asp-action="PlaceOrder" method="post">
 				<div class="mb-3">
 					<label asp-for="@Model.FirstName" class="form-label"></label>
 					<input asp-for="@Model.FirstName" class="form-control" aria-required="true" />
