--- a/LibraNET/Areas/Admin/Views/Book/Add.cshtml
+++ b/LibraNET/Areas/Admin/Views/Book/Add.cshtml
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
-        <form asp-controller="Book" asp-action="Add" method="post" enctype="multipart/form-data">
+        <form asp-area="Admin" asp-controller="Book" asp-action="Add" method="post" enctype="multipart/form-data">
             <div class="mb-3">
                 <label asp-for="@Model.Title" class="form-label"></label>
                 <input asp-for="@Model.Title" class="form-control" aria-required="true" />
