--- a/LibraNET/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/LibraNET/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -28,11 +28,40 @@
 						<li class="nav-item">
 							<a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link text-white" asp-area="" asp-controller="Book" asp-action="All">All Books</a>
+						<li class="nav-item dropdown">
+							<a class="nav-link text-white dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+								All
+							</a>
+							<ul class="dropdown-menu">
+								<li>
+									<a class="dropdown-item" asp-area="" asp-controller="Book" asp-action="All">Books</a>
+								</li>
+								<li>
+									<a class="dropdown-item" asp-area="" asp-controller="Author" asp-action="All">Authors</a>
+								</li>
+								<li>
+									<a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="All">Categories</a>
+								</li>
+								<li>
+									<a class="dropdown-item" asp-area="Admin" asp-controller="User" asp-action="All">Users</a>
+								</li>
+							</ul>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link text-white" asp-area="" asp-controller="Author" asp-action="All">All Authors</a>
+						<li class="nav-item dropdown">
+							<a class="nav-link text-white dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+								Add
+							</a>
+							<ul class="dropdown-menu">
+								<li>
+									<a class="dropdown-item" asp-area="Admin" asp-controller="Book" asp-action="Add">Book</a>
+								</li>
+								<li>
+									<a class="dropdown-item" asp-area="Admin" asp-controller="Author" asp-action="Add">Author</a>
+								</li>
+								<li>
+									<a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Add">Category</a>
+								</li>
+							</ul>
 						</li>
 					</ul>
 					<partial name="_LoginPartial" />
