--- a/LibraNET/Views/Shared/_AuthorPartial.cshtml
+++ b/LibraNET/Views/Shared/_AuthorPartial.cshtml
@@ -12,12 +12,10 @@
 				<p class="text-muted mb-4">@Model.Description</p>
 				@if (User.IsInRole("Admin"))
 				{
-					<form asp-controller="Author" asp-action="Delete" asp-route-id="@Model.Id" method="post">
+					<form asp-area="Admin" asp-controller="Author" asp-action="Delete" asp-route-id="@Model.Id" method="post">
 						<div class="btn-group w-50" role="group">
-							<a class="btn btn-success" asp-controller="Author" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
-							<button class="btn btn-dark" type="submit" onclick="return confirm('Are you sure you want to delete this author: @Model.Name?')">
-								Delete
-							</button>
+							<button class="btn btn-success" asp-area="Admin" asp-controller="Author" asp-action="Edit" asp-route-id="@Model.Id" formmethod="get">Edit</button>
+							<input class="btn btn-dark" type="submit" onclick="return confirm('Are you sure you want to delete this author: @Model.Name?')" value="Delete"/>
 						</div>
 					</form>
 				}
