--- a/LibraNET/Views/Shared/_BookPartial.cshtml
+++ b/LibraNET/Views/Shared/_BookPartial.cshtml
@@ -30,9 +30,9 @@
 				<h5 class="fw-bold">@($"${Model.Price:f2}")</h5>
 				@if (User.IsInRole("Admin"))
 				{
-					<form asp-controller="Book" asp-action="Delete" asp-route-id="@Model.Id" method="post">
+					<form asp-area="Admin" asp-controller="Book" asp-action="Delete" asp-route-id="@Model.Id" method="post">
 						<div class="btn-group w-50" role="group">
-							<button class="btn btn-success" asp-controller="Book" asp-action="Edit" asp-route-id="@Model.Id" formmethod="get">Edit</button>
+							<button class="btn btn-success" asp-area="Admin" asp-controller="Book" asp-action="Edit" asp-route-id="@Model.Id" formmethod="get">Edit</button>
 							<input class="btn btn-dark" type="submit" onclick="return confirm('Are you sure you want to delete this book: @Model.Title?')" value="Delete"/>
 						</div>
 					</form>
