--- a/LibraNET/Views/User/Account.cshtml
+++ b/LibraNET/Views/User/Account.cshtml
@@ -6,7 +6,7 @@
 <div class="row">
 	<div class="col-md-4">
 		<h2>Account Information</h2>
-		<form asp-controller="User" asp-action="Edit" method="post">
+		<form asp-area="Admin" asp-controller="User" asp-action="Edit" method="post">
 			<div class="mb-3">
 				<label asp-for="@Model.FirstName" class="form-label"></label>
 				<input asp-for="@Model.FirstName" class="form-control" aria-required="true" />
@@ -31,31 +31,41 @@
 		</form>
 	</div>
 	<div class="col-md-8 mb-4">
-		<section class="cart-items rounded-3 pb-2 p-4" style="background-color:#eee">
-			@foreach (var order in Model.Orders)
+		<section class="cart-items rounded-3 pb-2 p-3" style="background-color:#eee">
+			<h2 class="mb-3">Order History</h2>
+			<hr />
+			@if (Model.Orders.Count < 1)
 			{
-				<div class="card mb-3">
-					<div class="card-header bg-dark text-white fw-bold">@order.Date.ToString("f")</div>
-					<div class="card-body">
-						@foreach (var book in order.Books)
-						{
-							<partial name="_BookOrderPartial" model="@book"></partial>
-						}
-						<div class="row border-top pt-2 mt-2 justify-content-between">
-							<p class="mb-0">Recipient: @order.RecipientName</p>
-							<p class="mb-0">Address: @order.Town, @order.PostCode, @order.Address</p>
-						</div>
-						<div class="row border-top pt-2 mt-2 justify-content-between">
-							<div class="col-6">
-								<p class="mb-0">Shipping Price: Free</p>
+				<h3 class="text-muted text-center p-3">No orders yet!</h3>
+			}
+			else
+			{
+				@foreach (var order in Model.Orders)
+				{
+					<div class="card mb-3">
+						<div class="card-header bg-dark text-white fw-bold">@order.Date.ToString("f")</div>
+						<div class="card-body">
+							@foreach (var book in order.Books)
+							{
+								<partial name="_BookOrderPartial" model="@book"></partial>
+							}
+							<div class="row border-top pt-2 mt-2 justify-content-between">
+								<p class="mb-0">Recipient: @order.RecipientName</p>
+								<p class="mb-0">Address: @order.Town, @order.PostCode, @order.Address</p>
 							</div>
-							<div class="col-6 text-end">
-								<p class="mb-0">Total Price: $@order.Books.Sum(b => b.TotalPrice).ToString("f2")</p>
+							<div class="row border-top pt-2 mt-2 justify-content-between">
+								<div class="col-6">
+									<p class="mb-0">Shipping Price: Free</p>
+								</div>
+								<div class="col-6 text-end">
+									<p class="mb-0">Total Price: $@order.Books.Sum(b => b.TotalPrice).ToString("f2")</p>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
+				}
 			}
+
 		</section>
 	</div>
 </div>
