--- a/LibraNET/Views/_ViewStart.cshtml
+++ b/LibraNET/Views/_ViewStart.cshtml
@@ -1,3 +1,11 @@
 ﻿@{
-    Layout = "_Layout";
+	@if (User.IsInRole("Admin"))
+	{
+		Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
+
+	}
+	else
+	{
+		Layout = "_Layout";
+	}
 }
