--- a/LibraNET/Views/Shared/_AuthorPartial.cshtml
+++ b/LibraNET/Views/Shared/_AuthorPartial.cshtml
@@ -10,7 +10,7 @@
 			<div class="card-body text-center">
 				<h5 class="card-title">@Model.Name</h5>
 				<p class="text-muted mb-4">@Model.Description</p>
-				@if (User.IsInRole("Admin"))
+				@if (User.IsInRole(AdminRoleName))
 				{
 					<form asp-area="Admin" asp-controller="Author" asp-action="Delete" asp-route-id="@Model.Id" method="post">
 						<div class="btn-group w-50" role="group">
