--- a/LibraNET/Views/Shared/_BookCartPartial.cshtml
+++ b/LibraNET/Views/Shared/_BookCartPartial.cshtml
@@ -4,8 +4,10 @@
 	<div class="card-body p-4">
 		<div class="row d-flex justify-content-between align-items-center">
 			<div class="col-md-1 col-lg-1 col-xl-1 mb-3">
-				<img src="~/Images/Books/@(imageService.GetBookImageNameById(Model.ImageId))"
-					 class="img-fluid rounded-3" alt="@Model.Title">
+				<a class="text-decoration-none text-reset d-inline-flex" asp-area="" asp-controller="Book" asp-action="Details" asp-route-id="@Model.Id">
+					<img src="~/Images/Books/@(imageService.GetBookImageNameById(Model.ImageId))"
+						 class="img-fluid rounded-3" alt="@Model.Title">
+				</a>
 			</div>
 			<div class="col-md-3 col-lg-3 col-xl-3 mb-3">
 				<h5 class="m-0 ellipsis">@Model.Title</h5>
