--- a/LibraNET/Views/Book/Details.cshtml
+++ b/LibraNET/Views/Book/Details.cshtml
@@ -25,7 +25,7 @@
 					<span class="text-warning mb-1 me-2 d-inline-flex">
 						@((((double)Model.Ratings.Sum() / (Model.Ratings.Count == 0 ? 1 : Model.Ratings.Count)) * 2).ToString("f1", CultureInfo.InvariantCulture))/10 (@Model.Ratings.Count)
 					</span>
-					<span class="text-muted d-inline-flex"><i class="bi bi-bag-fill"></i>&nbsp;@(Model.OrdersCount) orders</span>
+					<span class="text-muted d-inline-flex"><i class="bi bi-cart-fill"></i>&nbsp;@(Model.OrdersCount) orders</span>
 					@if (Model.AvailableCount > 0)
 					{
 						<span class="text-success ms-2 d-inline-flex">In stock</span>
