--- a/LibraNET/Views/User/Account.cshtml
+++ b/LibraNET/Views/User/Account.cshtml
@@ -6,7 +6,7 @@
 <div class="row">
 	<div class="col-md-4">
 		<h2>Account Information</h2>
-		<form asp-area="Admin" asp-controller="User" asp-action="Edit" method="post">
+		<form asp-controller="User" asp-action="Edit" method="post">
 			<div class="mb-3">
 				<label asp-for="@Model.FirstName" class="form-label"></label>
 				<input asp-for="@Model.FirstName" class="form-control" aria-required="true" />
