--- a/LibraNET/Areas/Admin/Views/Category/All.cshtml
+++ b/LibraNET/Areas/Admin/Views/Category/All.cshtml
@@ -14,36 +14,44 @@
 		</div>
 	</div>
 </form>
-<div class="table-responsive">
-	<table class="table align-middle border">
-		<thead class="table-dark">
-			<tr>
-				<th scope="col">Id</th>
-				<th scope="col">Name</th>
-				<th scope="col">Edit/Delete</th>
-			</tr>
-		</thead>
-		<tbody>
-			@foreach (var category in Model.Categories)
-			{
-				<tr class="align-content-center">
-					<th scope="row">@category.Id</th>
-					<td>@category.Name</td>
-					<td>
-						<a asp-controller="Category" asp-action="Edit" asp-route-id="@category.Id" class="btn btn-sm btn-success d-inline-flex" type="submit">
-							Edit
-						</a>
-						<form class="d-inline-flex" asp-controller="Category" asp-action="Delete" asp-route-id="@category.Id" method="post">
-							<button class="btn btn-sm btn-dark" type="submit" onclick="return confirm('Are you sure you want to delete this category: @category.Name?')">
-								Delete
-							</button>
-						</form>
-					</td>
+
+@if (Model.Categories.Any())
+{
+	<div class="table-responsive">
+		<table class="table align-middle border">
+			<thead class="table-dark">
+				<tr>
+					<th scope="col">Id</th>
+					<th scope="col">Name</th>
+					<th scope="col">Edit/Delete</th>
 				</tr>
-			}
-		</tbody>
-	</table>
-</div>
+			</thead>
+			<tbody>
+				@foreach (var category in Model.Categories)
+				{
+					<tr class="align-content-center">
+						<th scope="row">@category.Id</th>
+						<td>@category.Name</td>
+						<td>
+							<a asp-controller="Category" asp-action="Edit" asp-route-id="@category.Id" class="btn btn-sm btn-success d-inline-flex" type="submit">
+								Edit
+							</a>
+							<form class="d-inline-flex" asp-controller="Category" asp-action="Delete" asp-route-id="@category.Id" method="post">
+								<button class="btn btn-sm btn-dark" type="submit" onclick="return confirm('Are you sure you want to delete this category: @category.Name?')">
+									Delete
+								</button>
+							</form>
+						</td>
+					</tr>
+				}
+			</tbody>
+		</table>
+	</div>
+}
+else
+{
+	<h2 class="my-5 text-center text-muted">No categories!</h2>
+}
 
 @if (Model.Categories.Any())
 {
