--- a/LibraNET/Areas/Admin/Views/Book/Edit.cshtml
+++ b/LibraNET/Areas/Admin/Views/Book/Edit.cshtml
@@ -61,7 +61,6 @@
 			<div class="mb-3">
 				<label asp-for="@Model.SelectedCategoriesIds" class="form-label"></label>
 				<select asp-for="@Model.SelectedCategoriesIds" class="form-select" id="multiple-select-field-categories" data-placeholder="Choose categories" multiple>
-					=
 					@foreach (var category in @Model.Categories)
 					{
 						<option value="@category.Id">@category.Name</option>
@@ -90,5 +89,5 @@
 @section Scripts {
 	<partial name="_ValidationScriptsPartial" />
 	<script src="~/js/Shared/AuthorAndCategoryMultipleSelects.js"></script>
-	<script src="~/js//Book/Edit.js"></script>
+	<script src="~/js/Book/Edit.js"></script>
 }
