--- a/LibraNET/Views/Shared/_Layout.cshtml
+++ b/LibraNET/Views/Shared/_Layout.cshtml
@@ -27,12 +27,12 @@
 					<ul class="navbar-nav flex-grow-1">
 						<li class="nav-item">
 							<a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+						</li>	
+						<li class="nav-item">
+							<a class="nav-link text-white" asp-area="" asp-controller="Book" asp-action="All">Books</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-white" asp-area="" asp-controller="Book" asp-action="All">All Books</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link text-white" asp-area="" asp-controller="Author" asp-action="All">All Authors</a>
+							<a class="nav-link text-white" asp-area="" asp-controller="Author" asp-action="All">Authors</a>
 						</li>
 					</ul>
 					<partial name="_LoginPartial" />
