--- a/LibraNET/Views/_ViewImports.cshtml
+++ b/LibraNET/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using LibraNET
 @using LibraNET.Data.Models;
+@using LibraNET.Data.Models.Enums;
 @using LibraNET.Services.Data.Contracts;
 @using LibraNET.Web.ViewModels;
 @using LibraNET.Web.ViewModels.Book;
@@ -9,6 +10,7 @@
 @using LibraNET.Web.ViewModels.Enums;
 @using LibraNET.Web.ViewModels.Comment;
 @using LibraNET.Web.ViewModels.Cart;
+@using LibraNET.Web.ViewModels.Order;
 
 @using static LibraNET.Common.GeneralApplicationConstants;
 
