--- a/LibraNET/Areas/Admin/Views/_ViewImports.cshtml
+++ b/LibraNET/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,10 +1,12 @@
 ﻿@using LibraNET
 @using LibraNET.Data.Models;
+@using LibraNET.Data.Models.Enums;
 @using LibraNET.Services.Data.Contracts;
 @using LibraNET.Web.ViewModels;
 @using LibraNET.Web.ViewModels.Book;
 @using LibraNET.Web.ViewModels.Author;
 @using LibraNET.Web.ViewModels.Category;
+@using LibraNET.Web.ViewModels.Order;
 @using LibraNET.Web.ViewModels.User;
 @using LibraNET.Web.ViewModels.Enums;
 @using LibraNET.Web.ViewModels.Comment;
