--- a/LibraNET/Views/Author/Details.cshtml
+++ b/LibraNET/Views/Author/Details.cshtml
@@ -16,5 +16,18 @@
 			<hr />
 			<p>@Model.Description</p>
 		</div>
+		@if (User.IsInRole(AdminRoleName) || User.IsInRole(SuperAdminRoleName))
+		{
+			<div class="mb-3 d-flex justify-content-center gap-5">
+				<a asp-controller="Author" asp-area="Admin" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-success d-inline-flex">
+					Edit
+				</a>
+				<form class="d-inline-block" asp-controller="Author" asp-area="Admin" asp-action="Delete" asp-route-id="@Model.Id" method="post">
+					<button class="btn btn-dark" type="submit" onclick="return confirm('Are you sure you want to delete this author: @Model.Name?')">
+						Delete
+					</button>
+				</form>
+			</div>
+		}
 	</div>
 </div>
