--- a/LibraNET/Views/Book/Details.cshtml
+++ b/LibraNET/Views/Book/Details.cshtml
@@ -1,126 +1,141 @@
 ﻿@model BookDetailsViewModel
 @inject IImageService imageService
 @{
-	ViewData["Title"] = "Book Details";
+    ViewData["Title"] = "Book Details";
 }
 <div class="py-5 d-flex justify-content-center">
-	<div class="row col-10 justify-content-center">
-		<div class="col-lg-5">
-			<div class=" mb-3 d-flex justify-content-center">
-				<a class="rounded-4" data-type="image" href="~/Images/Books/@(imageService.GetBookImageNameById(Model.ImageId))">
-					<img style="max-width: 100%; max-height: 50vh; margin: auto;" class="rounded-4 fit" src="~/Images/Books/@(imageService.GetBookImageNameById(Model.ImageId))" />
-				</a>
-			</div>
-		</div>
-		<div class="col-lg-5">
-			<div class="ps-lg-3">
-				<h4 class="title text-dark">@Model.Title</h4>
-				<div class="d-inline-block flex-row my-3">
-					<div class="d-inline-flex">
-						<div class="full-star-ratings" data-rateyo-full-star="true" data-rateyo-star-width="20px"></div>
-						<form id="rating-form" asp-controller="Book" asp-action="Rate" asp-route-id="@Model.Id" method="post">
-							<input asp-for="Rating" type="hidden" />
-						</form>
-					</div>
-					<span class="text-warning mb-1 me-2 d-inline-flex">
-						@((((double)Model.Ratings.Sum() / (Model.Ratings.Count == 0 ? 1 : Model.Ratings.Count)) * 2).ToString("f1", CultureInfo.InvariantCulture))/10 (@Model.Ratings.Count)
-					</span>
-					<span class="text-muted d-inline-flex"><i class="bi bi-cart-fill"></i>&nbsp;@(Model.OrdersCount) orders</span>
-					@if (Model.AvailableCount > 0)
-					{
-						<span class="text-success ms-2 d-inline-flex">In stock</span>
-					}
-					else
-					{
-						<span class="text-danger ms-2 d-inline-flex">Out of stock</span>
-					}
-				</div>
-				<h5 class="my-3">$@Model.Price.ToString("f2")</h5>
-				@if (Model.AvailableCount > 0)
-				{
-					<form id="AddToCartForm" asp-controller="Cart" asp-action="Add" asp-route-id="@Model.Id" method="post">
-						<div class="row mb-3">
-							<div class="col-md-4 col-6 mb-3">
-								<input asp-for="Quantity" class="form-control text-center border border-secondary bg-white" min="1" max="@Model.AvailableCount" />
-							</div>
-						</div>
-					</form>
-				}
-				<div>
-					<button id="AddToCartBtn" class="btn btn-success my-1 @(Model.AvailableCount > 0 ? "" : "disabled")"> <i class="bi bi-cart-fill"></i> Add to cart </button>
-					<form class="d-inline-block" asp-controller="Book" asp-action="ToggleFavorite" asp-route-id="@Model.Id" method="post">
-						<button type="submit" class="btn btn-dark my-1"> <i class="bi bi-heart-fill"></i>   @(Model.IsFavorite ? "Remove from Favorites" : "Add to Favorites") </button>
-					</form>
-				</div>
-			</div>
-		</div>
-		<div class="my-4 card p-4">
-			<h5>Description</h5>
-			<hr />
-			<p>@Model.Description</p>
+    <div class="row col-10 justify-content-center">
+        <div class="col-lg-5">
+            <div class=" mb-3 d-flex justify-content-center">
+                <a class="rounded-4" data-type="image" href="~/Images/Books/@(imageService.GetBookImageNameById(Model.ImageId))">
+                    <img style="max-width: 100%; max-height: 50vh; margin: auto;" class="rounded-4 fit" src="~/Images/Books/@(imageService.GetBookImageNameById(Model.ImageId))" />
+                </a>
+            </div>
+        </div>
+        <div class="col-lg-5">
+            <div class="ps-lg-3">
+                <h4 class="title text-dark">@Model.Title</h4>
+                <div class="d-inline-block flex-row my-3">
+                    <div class="d-inline-flex">
+                        <div class="full-star-ratings" data-rateyo-full-star="true" data-rateyo-star-width="20px"></div>
+                        <form id="rating-form" asp-controller="Book" asp-action="Rate" asp-route-id="@Model.Id" method="post">
+                            <input asp-for="Rating" type="hidden" />
+                        </form>
+                    </div>
+                    <span class="text-warning mb-1 me-2 d-inline-flex">
+                        @((((double)Model.Ratings.Sum() / (Model.Ratings.Count == 0 ? 1 : Model.Ratings.Count)) * 2).ToString("f1", CultureInfo.InvariantCulture))/10 (@Model.Ratings.Count)
+                    </span>
+                    <span class="text-muted d-inline-flex"><i class="bi bi-cart-fill"></i>&nbsp;@(Model.OrdersCount) orders</span>
+                    @if (Model.AvailableCount > 0)
+                    {
+                        <span class="text-success ms-2 d-inline-flex">In stock</span>
+                    }
+                    else
+                    {
+                        <span class="text-danger ms-2 d-inline-flex">Out of stock</span>
+                    }
+                </div>
+                <h5 class="my-3">$@Model.Price.ToString("f2")</h5>
+                @if (Model.AvailableCount > 0)
+                {
+                    <form id="AddToCartForm" asp-controller="Cart" asp-action="Add" asp-route-id="@Model.Id" method="post">
+                        <div class="row mb-3">
+                            <div class="col-md-4 col-6 mb-3">
+                                <input asp-for="Quantity" class="form-control text-center border border-secondary bg-white" min="1" max="@Model.AvailableCount" />
+                            </div>
+                        </div>
+                    </form>
+                }
+                <div>
+                    @if (User.IsInRole(AdminRoleName) || User.IsInRole(SuperAdminRoleName))
+                    {
+                        <div class="mb-3">
+                            <a asp-controller="Book" asp-area="Admin" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-success d-inline-flex" type="submit">
+                                Edit
+                            </a>
+                            <form class="d-inline-block" asp-controller="Book" asp-area="Admin" asp-action="Delete" asp-route-id="@Model.Id" method="post">
+                                <button class="btn btn-dark" type="submit" onclick="return confirm('Are you sure you want to delete this book: @Model.Title?')">
+                                    Delete
+                                </button>
+                            </form>
+                        </div>
+                    }
+                    <div>
+                        <button id="AddToCartBtn" class="btn btn-success my-1 @(Model.AvailableCount > 0 ? "" : "disabled")"> <i class="bi bi-cart-fill"></i> Add to cart </button>
+                        <form class="d-inline-block" asp-controller="Book" asp-action="ToggleFavorite" asp-route-id="@Model.Id" method="post">
+                            <button type="submit" class="btn btn-dark my-1"> <i class="bi bi-heart-fill"></i>   @(Model.IsFavorite ? "Remove from Favorites" : "Add to Favorites") </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="my-4 card p-4">
+            <h5>Description</h5>
+            <hr />
+            <p>@Model.Description</p>
 
-			<h5>More Info</h5>
-			<hr />
-			<div class="row">
-				<p><span class="fw-bold">ISBN: </span>@Model.ISBN</p>
-				<p><span class="fw-bold">Publisher: </span>@Model.PublisherName</p>
-				<p><span class="fw-bold">Publication date: </span>@Model.PublicationDate.ToShortDateString()</p>
-				<p>
-					<span class="fw-bold">@(Model.Authors.Count > 1 ? "Authors: " : "Author: ")</span>
-					@{
-						int authorCounter = 0;
-					}
-					@foreach (var author in Model.Authors)
-					{
-						authorCounter++;
-						<a asp-controller="Author" asp-action="Details" asp-route-id="@author.Id">@author.Name</a>
+            <h5>More Info</h5>
+            <hr />
+            <div class="row">
+                <p><span class="fw-bold">ISBN: </span>@Model.ISBN</p>
+                <p><span class="fw-bold">Publisher: </span>@Model.PublisherName</p>
+                <p><span class="fw-bold">Publication date: </span>@Model.PublicationDate.ToShortDateString()</p>
+                <p>
+                    <span class="fw-bold">@(Model.Authors.Count > 1 ? "Authors: " : "Author: ")</span>
+                    @{
+                        int authorCounter = 0;
+                    }
+                    @foreach (var author in Model.Authors)
+                    {
+                        authorCounter++;
+                        <a asp-controller="Author" asp-action="Details" asp-route-id="@author.Id">@author.Name</a>
 
-						<span>@(Model.Authors.Count == authorCounter ? "" : ", ")</span>
-					}
-				</p>
-				<p>
-					<span class="fw-bold">@(Model.Categories.Count > 1 ? "Categories: " : "Category: ")</span>
-					@{
-						int categoryCounter = 0;
-					}
-					@foreach (var category in Model.Categories)
-					{
-						categoryCounter++;
-						<a asp-controller="Book" asp-action="All" asp-route-SelectedCategoriesIds="@category.Id.ToUpper()">@category.Name</a>
+                        <span>@(Model.Authors.Count == authorCounter ? "" : ", ")</span>
+                    }
+                </p>
+                <p>
+                    <span class="fw-bold">@(Model.Categories.Count > 1 ? "Categories: " : "Category: ")</span>
+                    @{
+                        int categoryCounter = 0;
+                    }
+                    @foreach (var category in Model.Categories)
+                    {
+                        categoryCounter++;
+                        <a asp-controller="Book" asp-action="All" asp-route-SelectedCategoriesIds="@category.Id.ToUpper()">@category.Name</a>
 
-						<span>@(Model.Categories.Count == categoryCounter ? "" : ", ")</span>
-					}
-				</p>
-			</div>
-		</div>
+                        <span>@(Model.Categories.Count == categoryCounter ? "" : ", ")</span>
+                    }
+                </p>
+            </div>
+        </div>
 
-		<div class="mt-5">
-			<h2 class="text-center">Comments</h2>
-			<hr />
-			<div id="comments">
-				@if (Model.Comments.Count <= 0)
-				{
-					<h5 class="text-muted my-5 text-center">There are no comments for this book.</h5>
-				}
-				else
-				{
-					@foreach (var comment in Model.Comments)
-					{
-						<partial name="_CommentPartial" model="@comment"></partial>
-					}
-				}
-			</div>
-			<form id="commentForm" asp-controller="Book" asp-action="Comment" asp-route-id="@Model.Id" method="post">
-				<span asp-validation-for="Comment" class="text-danger"></span>
-				<textarea id="comment" asp-for="Comment" class="form-control bg-white rounded-top" rows="4" placeholder="Comment..."></textarea>
-				<button id="sendButton" type="submit" class="btn btn-success w-100">Add Comment</button>
-			</form>
-		</div>
-	</div>
+        <div class="mt-5">
+            <h2 class="text-center">Comments</h2>
+            <hr />
+            <div id="comments">
+                @if (Model.Comments.Count <= 0)
+                {
+                    <h5 class="text-muted my-5 text-center">There are no comments for this book.</h5>
+                }
+                else
+                {
+                    @foreach (var comment in Model.Comments)
+                    {
+                        <partial name="_CommentPartial" model="@comment"></partial>
+                    }
+                }
+            </div>
+            <form id="commentForm" asp-controller="Book" asp-action="Comment" asp-route-id="@Model.Id" method="post">
+                <span asp-validation-for="Comment" class="text-danger"></span>
+                <textarea id="comment" asp-for="Comment" class="form-control bg-white rounded-top" rows="4" placeholder="Comment..."></textarea>
+                <button id="sendButton" type="submit" class="btn btn-success w-100">Add Comment</button>
+            </form>
+        </div>
+    </div>
 </div>
 @section Scripts {
-	<partial name="_ValidationScriptsPartial" />
-	<script src="~/js/Book/Details.js" asp-append-version="true"></script>
-	<script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
-	<script type="module" src="~/js/comments.js" asp-append-version="true"></script>
+    <partial name="_ValidationScriptsPartial" />
+    <script src="~/js/Book/Details.js" asp-append-version="true"></script>
+    <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
+    <script type="module" src="~/js/comments.js" asp-append-version="true"></script>
 }
