--- a/LibraNET/Views/_ViewStart.cshtml
+++ b/LibraNET/Views/_ViewStart.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-	@if (User.IsInRole(AdminRoleName))
+	@if (User.IsInRole(AdminRoleName) || User.IsInRole(SuperAdminRoleName))
 	{
 		Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 
